feat: add animals pages and error page

--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -33,7 +33,7 @@
                   <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
                 </li>
                 <li class="menu__item">
-                  <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                  <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
                 </li>
                 <li class="menu__item">
                   <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -65,7 +65,7 @@
               </span>
               <div class="map__pet-name map__pet-name--eagle">eagle</div>
               <div class="map__mark map__mark--eagle">
-                <img src="/assets/icons/marker/marker.svg" alt="">
+                <img src="/assets/icons/marker/marker.svg" alt="" />
               </div>
               <div class="map__location--usa">
                 <p>USA</p>
@@ -85,7 +85,7 @@
               </span>
               <div class="map__pet-name map__pet-name--alligator">alligator</div>
               <div class="map__mark map__mark--alligator">
-                <img src="/assets/icons/marker/marker.svg" alt="">
+                <img src="/assets/icons/marker/marker.svg" alt="" />
               </div>
             </div>
             <div class="map__pet map__pet--gorilla">
@@ -102,9 +102,9 @@
               </span>
               <div class="map__pet-name map__pet-name--gorilla">gorilla</div>
               <div class="map__mark map__mark--gorilla">
-                <img src="/assets/icons/marker/marker.svg" alt="">
+                <img src="/assets/icons/marker/marker.svg" alt="" />
                 <div class="map__location--drc">
-                  <p>Eastern<br>DRC</p>
+                  <p>Eastern<br />DRC</p>
                 </div>
               </div>
             </div>
@@ -115,18 +115,18 @@
                 </a>
               </div>
               <span class="tooltip tooltip-panda">
-             <div class="tooltip-block tooltip-block--right">
-               <h6 class="tooltip-heading">panda,</h6>
-               <p class="tooltip-location text">china</p>
-             </div>
-           </span>
-           <div class="map__pet-name map__pet-name--panda">panda bear</div>
-           <div class="map__mark map__mark--panda">
-             <img src="/assets/icons/marker/marker.svg" alt="">
-             <div class="map__location--china">
-              <p>China</p>
-            </div>
-           </div>
+                <div class="tooltip-block tooltip-block--right">
+                  <h6 class="tooltip-heading">panda,</h6>
+                  <p class="tooltip-location text">china</p>
+                </div>
+              </span>
+              <div class="map__pet-name map__pet-name--panda">panda bear</div>
+              <div class="map__mark map__mark--panda">
+                <img src="/assets/icons/marker/marker.svg" alt="" />
+                <div class="map__location--china">
+                  <p>China</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -149,13 +149,13 @@
                     <a class="menu__link" href="/pages/main/index.html">about</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                    <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
                   </li>
                   <li class="menu__item footer-menu-item">
                     <a class="menu__link" href="/pages/map/map.html">map</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">feedback</a>
+                    <a class="menu__link" href="javascript:void(0)">feedback</a>
                   </li>
                 </ul>
               </nav>
