--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -32,7 +32,7 @@
                 <a class="menu__link menu__link--active" href="javascript:void(0)">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -47,22 +47,22 @@
         <ul class="sidebar-menu">
           <li class="sidebar-icon">
             <div class="icon-container">
-            <a href="/pages/zoos/alligator/">
-                <img class="icon-img" src="/assets/images/pets-sidebar/alligator.png" alt="">
+              <a href="/pages/zoos/alligator/alligator.html">
+                <img class="icon-img" src="/assets/images/pets-sidebar/alligator.png" alt="" />
               </a>
+            </div>
+            <span class="tooltip tooltip-alligator">
+              <div class="tooltip-block">
+                <h6 class="tooltip-heading">alligator,</h6>
+                <p class="tooltip-location text">florida, USA</p>
               </div>
-              <span class="tooltip tooltip-alligator">
-                <div class="tooltip-block">
-                  <h6 class="tooltip-heading">alligator,</h6>
-                  <p class="tooltip-location text">florida, USA</p>
-                </div>
-              </span>
+            </span>
           </li>
           <li class="sidebar-icon icon-active">
             <div class="icon-container">
               <a href="javascript:void(0)">
-              <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="">
-            </a>
+                <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="" />
+              </a>
             </div>
             <span class="tooltip tooltip-panda">
               <div class="tooltip-block">
@@ -74,7 +74,7 @@
           <li class="sidebar-icon">
             <div class="icon-container">
               <a href="/pages/zoos/eagle/eagle.html">
-              <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="">
+                <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="" />
               </a>
             </div>
             <span class="tooltip tooltip-eagle">
@@ -87,7 +87,7 @@
           <li class="sidebar-icon">
             <div class="icon-container">
               <a href="/pages/zoos/gorilla/gorilla.html">
-              <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="">
+                <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="" />
               </a>
             </div>
             <span class="tooltip tooltip-gorilla">
@@ -100,7 +100,7 @@
           <li class="sidebar-icon">
             <div class="icon-container">
               <a href="javascript:void(0)">
-                <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="">
+                <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="" />
               </a>
             </div>
           </li>
@@ -136,7 +136,7 @@
               class="playlist__item item2"
               width="275"
               height="155"
-              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -156,7 +156,7 @@
               class="playlist__item item4"
               width="275"
               height="155"
-              src="https://www.youtube-nocookie.com/embed/OObOQ2GElhA"
+              src="https://www.youtube-nocookie.com/embed/D0eqnda8dOk"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -167,28 +167,27 @@
       </div>
       <div class="info-container container">
         <div class="info">
-          <div class="info info1 text">
-            ZOO: The Shenshuping Gengda Panda Center (Sichuan, China)
-          </div>
-          <div class="info info2 text">
-            ENCLOSURE TYPE: Imitation of the natural environment
-          </div>
+          <div class="info info1 text">ZOO: The Shenshuping Gengda Panda Center (Sichuan, China)</div>
+          <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
         </div>
         <div class="spoilers">
           <details class="spoiler-details spoiler-details1" open>
             <summary class="spoiler-summary">
               <span class="text">population</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
-              </div>
+            </summary>
+            <div class="spoiler-content">
+              <p class="spoiler-text text">There are only an estimated 1600 pandas in the wild and about 325 in captivity.</p>
+            </div>
           </details>
           <details class="spoiler-details spoiler-details2" open>
             <summary class="spoiler-summary">
               <span class="text">habitat</span>
             </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text text">Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few provinces of southwestern China.</p>
+              <p class="spoiler-text text">
+                Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few
+                provinces of southwestern China.
+              </p>
             </div>
           </details>
           <details class="spoiler-details spoiler-details3" open>
@@ -196,7 +195,10 @@
               <span class="text">nutrition</span>
             </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text text">Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.</p>
+              <p class="spoiler-text text">
+                Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to
+                meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.
+              </p>
             </div>
           </details>
           <details class="spoiler-details spoiler-details4" open>
@@ -204,7 +206,10 @@
               <span class="text">interesting facts</span>
             </summary>
             <div class="spoiler-content">
-              <p class="spoiler-text text">Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their coat keeps them warm in the cool moist climate of the mountain forests.</p>
+              <p class="spoiler-text text">
+                Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their
+                coat keeps them warm in the cool moist climate of the mountain forests.
+              </p>
             </div>
           </details>
         </div>
@@ -227,13 +232,13 @@
                     <a class="menu__link" href="/pages/main/index.html">about</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                    <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
                   </li>
                   <li class="menu__item footer-menu-item">
                     <a class="menu__link" href="/pages/map/map.html">map</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">feedback</a>
+                    <a class="menu__link" href="/javascript:void(0)">feedback</a>
                   </li>
                 </ul>
               </nav>
