--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -32,7 +32,7 @@
                 <a class="menu__link" href="/pages/zoos/panda/panda.html">zoos</a>
               </li>
               <li class="menu__item">
-                <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
               </li>
               <li class="menu__item">
                 <a class="menu__link" href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo" target="blank">design</a>
@@ -296,13 +296,13 @@
                     <a class="menu__link" href="#">about</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">contact us</a>
+                    <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
                   </li>
                   <li class="menu__item footer-menu-item">
                     <a class="menu__link" href="/pages/map/map.html">map</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/404/404-not-found.html">feedback</a>
+                    <a class="menu__link" href="javascript:void(0)">feedback</a>
                   </li>
                 </ul>
               </nav>
