fix: fix images in How it works block

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -60,20 +60,20 @@
           <h2 class="heading">how it works</h2>
           <div class="pets-box">
             <ul class="pets">
-              <li class="image">
-                <img class="image eagle" src="/assets/images/pets-parallax/eagle.jpg" alt="eagle" />
+              <li class="image eagle">
+                <img class="pet-image" src="/assets/images/pets-parallax/eagle.jpg" alt="eagle" />
               </li>
-              <li class="image">
-                <img class="image tiger" src="/assets/images/pets-parallax/tiger.jpg" alt="tiger" />
+              <li class="image tiger">
+                <img class="pet-image" src="/assets/images/pets-parallax/tiger.jpg" alt="tiger" />
               </li>
-              <li class="image">
-                <img class="image panda" src="/assets/images/pets-parallax/panda.jpg" alt="panda" />
+              <li class="image panda">
+                <img class="pet-image" src="/assets/images/pets-parallax/panda.jpg" alt="panda" />
               </li>
-              <li class="image">
-                <img class="image monkey" src="/assets/images/pets-parallax/monkey.jpg" alt="monkey" />
+              <li class="image monkey">
+                <img class="pet-image" src="/assets/images/pets-parallax/monkey.jpg" alt="monkey" />
               </li>
-              <li class="image">
-                <img class="image elephant" src="/assets/images/pets-parallax/elephant.jpg" alt="elephant" />
+              <li class="image elephant">
+                <img class="pet-image" src="/assets/images/pets-parallax/elephant.jpg" alt="elephant" />
               </li>
             </ul>
           </div>
