refactor: minor changes

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -282,55 +282,57 @@
     <footer class="footer">
       <div class="footer-background">
         <div class="container content">
-          <div class="footer-links">
-            <a href="#">
-              <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
-            </a>
-            <div class="donate__button">
-              <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+          <div class="footer-content">
+            <div class="footer-links__logo-button">
+              <a href="#">
+                <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+              </a>
+              <div class="donate__button">
+                <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+              </div>
             </div>
-            <div class="footer-nav-block">
-              <nav class="footer-nav">
-                <ul class="menu footer-menu">
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="#">about</a>
+            <div class="footer-links__links">
+                <nav class="footer-nav">
+                  <ul class="menu footer-menu">
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="#">about</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="/pages/map/map.html">map</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="javascript:void(0)">feedback</a>
+                    </li>
+                  </ul>
+                </nav>
+              <address class="socials">
+                <ul class="social">
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.instagram.com">
+                      <img src="/assets/icons/socials/insta.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.facebook.com">
+                      <img src="/assets/icons/socials/facebook.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/map/map.html">map</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.twitter.com">
+                      <img src="/assets/icons/socials/twitter.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="javascript:void(0)">feedback</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://youtube.com">
+                      <img src="/assets/icons/socials/youtube.svg" alt="" />
+                    </a>
                   </li>
                 </ul>
-              </nav>
+              </address>
             </div>
-            <address class="socials">
-              <ul class="social">
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.instagram.com">
-                    <img src="/assets/icons/socials/insta.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.facebook.com">
-                    <img src="/assets/icons/socials/facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.twitter.com">
-                    <img src="/assets/icons/socials/twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://youtube.com">
-                    <img src="/assets/icons/socials/youtube.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </address>
           </div>
           <div class="footer-credentials">
             <div class="schools-logo">
