--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -42,70 +42,70 @@
         </div>
       </div>
     </header>
+    <aside class="sidebar">
+      <ul class="sidebar-menu">
+        <li class="sidebar-icon icon-active">
+          <div class="icon-container">
+            <a href="javascript:void(0)">
+              <img class="icon-img" src="/assets/images/pets-sidebar/alligator.png" alt="" />
+            </a>
+          </div>
+          <span class="tooltip tooltip-alligator">
+            <div class="tooltip-block">
+              <h6 class="tooltip-heading">alligator,</h6>
+              <p class="tooltip-location text">florida, USA</p>
+            </div>
+          </span>
+        </li>
+        <li class="sidebar-icon">
+          <div class="icon-container">
+            <a href="/pages/zoos/panda/panda.html">
+              <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="" />
+            </a>
+          </div>
+          <span class="tooltip tooltip-panda">
+            <div class="tooltip-block">
+              <h6 class="tooltip-heading">panda,</h6>
+              <p class="tooltip-location text">china</p>
+            </div>
+          </span>
+        </li>
+        <li class="sidebar-icon">
+          <div class="icon-container">
+            <a href="/pages/zoos/eagle/eagle.html">
+              <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="" />
+            </a>
+          </div>
+          <span class="tooltip tooltip-eagle">
+            <div class="tooltip-block">
+              <h6 class="tooltip-heading">eagle,</h6>
+              <p class="tooltip-location text">california,USA</p>
+            </div>
+          </span>
+        </li>
+        <li class="sidebar-icon">
+          <div class="icon-container">
+            <a href="/pages/zoos/gorilla/gorilla.html">
+              <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="" />
+            </a>
+          </div>
+          <span class="tooltip tooltip-gorilla">
+            <div class="tooltip-block">
+              <h6 class="tooltip-heading">gorilla,</h6>
+              <p class="tooltip-location text">eastern DRC</p>
+            </div>
+          </span>
+        </li>
+        <li class="sidebar-icon">
+          <div class="icon-container">
+            <a href="javascript:void(0)">
+              <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="" />
+            </a>
+          </div>
+        </li>
+      </ul>
+    </aside>
     <main class="main">
-      <aside class="sidebar">
-        <ul class="sidebar-menu">
-          <li class="sidebar-icon icon-active">
-            <div class="icon-container">
-              <a href="javascript:void(0)">
-                <img class="icon-img" src="/assets/images/pets-sidebar/alligator.png" alt="" />
-              </a>
-            </div>
-            <span class="tooltip tooltip-alligator">
-              <div class="tooltip-block">
-                <h6 class="tooltip-heading">alligator,</h6>
-                <p class="tooltip-location text">florida, USA</p>
-              </div>
-            </span>
-          </li>
-          <li class="sidebar-icon">
-            <div class="icon-container">
-              <a href="/pages/zoos/panda/panda.html">
-                <img class="icon-img" src="/assets/images/pets-sidebar/panda.png" alt="" />
-              </a>
-            </div>
-            <span class="tooltip tooltip-panda">
-              <div class="tooltip-block">
-                <h6 class="tooltip-heading">panda,</h6>
-                <p class="tooltip-location text">china</p>
-              </div>
-            </span>
-          </li>
-          <li class="sidebar-icon">
-            <div class="icon-container">
-              <a href="/pages/zoos/eagle/eagle.html">
-                <img class="icon-img" src="/assets/images/pets-sidebar/eagle.png" alt="" />
-              </a>
-            </div>
-            <span class="tooltip tooltip-eagle">
-              <div class="tooltip-block">
-                <h6 class="tooltip-heading">eagle,</h6>
-                <p class="tooltip-location text">california,USA</p>
-              </div>
-            </span>
-          </li>
-          <li class="sidebar-icon">
-            <div class="icon-container">
-              <a href="/pages/zoos/gorilla/gorilla.html">
-                <img class="icon-img" src="/assets/images/pets-sidebar/gorilla.png" alt="" />
-              </a>
-            </div>
-            <span class="tooltip tooltip-gorilla">
-              <div class="tooltip-block">
-                <h6 class="tooltip-heading">gorilla,</h6>
-                <p class="tooltip-location text">eastern DRC</p>
-              </div>
-            </span>
-          </li>
-          <li class="sidebar-icon">
-            <div class="icon-container">
-              <a href="javascript:void(0)">
-                <img class="icon-img" src="/assets/images/pets-sidebar/feed.svg" alt="" />
-              </a>
-            </div>
-          </li>
-        </ul>
-      </aside>
       <div class="container">
         <div class="heading-container">
           <h2 class="heading">alligator</h2>
@@ -215,55 +215,57 @@
     <footer class="footer">
       <div class="footer-background">
         <div class="container content">
-          <div class="footer-links">
-            <a href="#">
-              <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
-            </a>
-            <div class="donate__button">
-              <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+          <div class="footer-content">
+            <div class="footer-links__logo-button">
+              <a href="#">
+                <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
+              </a>
+              <div class="donate__button">
+                <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
+              </div>
             </div>
-            <div class="footer-nav-block">
-              <nav class="footer-nav">
-                <ul class="menu footer-menu">
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/main/index.html">about</a>
+            <div class="footer-links__links">
+                <nav class="footer-nav">
+                  <ul class="menu footer-menu">
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="#">about</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="/pages/map/map.html">map</a>
+                    </li>
+                    <li class="menu__item footer-menu-item">
+                      <a class="menu__link" href="javascript:void(0)">feedback</a>
+                    </li>
+                  </ul>
+                </nav>
+              <address class="socials">
+                <ul class="social">
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.instagram.com">
+                      <img src="/assets/icons/socials/insta.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/page-not-found/page-not-found.html">contact us</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.facebook.com">
+                      <img src="/assets/icons/socials/facebook.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="/pages/map/map.html">map</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://www.twitter.com">
+                      <img src="/assets/icons/socials/twitter.svg" alt="" />
+                    </a>
                   </li>
-                  <li class="menu__item footer-menu-item">
-                    <a class="menu__link" href="javascript:void(0)">feedback</a>
+                  <li class="menu__item">
+                    <a class="menu__link" href="https://youtube.com">
+                      <img src="/assets/icons/socials/youtube.svg" alt="" />
+                    </a>
                   </li>
                 </ul>
-              </nav>
+              </address>
             </div>
-            <address class="socials">
-              <ul class="social">
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.instagram.com">
-                    <img src="/assets/icons/socials/insta.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.facebook.com">
-                    <img src="/assets/icons/socials/facebook.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://www.twitter.com">
-                    <img src="/assets/icons/socials/twitter.svg" alt="" />
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="https://youtube.com">
-                    <img src="/assets/icons/socials/youtube.svg" alt="" />
-                  </a>
-                </li>
-              </ul>
-            </address>
           </div>
           <div class="footer-credentials">
             <div class="schools-logo">
