refactor: fix map interactions

--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -67,7 +67,7 @@
               <div class="map__mark map__mark--eagle">
                 <img src="/assets/icons/marker/marker.svg" alt="" />
               </div>
-              <div class="map__location--usa">
+              <div class="map__location map__location--usa">
                 <p>USA</p>
               </div>
             </div>
@@ -103,7 +103,7 @@
               <div class="map__pet-name map__pet-name--gorilla">gorilla</div>
               <div class="map__mark map__mark--gorilla">
                 <img src="/assets/icons/marker/marker.svg" alt="" />
-                <div class="map__location--drc">
+                <div class="map__location map__location--drc">
                   <p>Eastern<br />DRC</p>
                 </div>
               </div>
@@ -123,7 +123,7 @@
               <div class="map__pet-name map__pet-name--panda">panda bear</div>
               <div class="map__mark map__mark--panda">
                 <img src="/assets/icons/marker/marker.svg" alt="" />
-                <div class="map__location--china">
+                <div class="map__location map__location--china">
                   <p>China</p>
                 </div>
               </div>
