--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="header__content">
           <div class="logo">
-            <a href="#">
+            <a href="/pages/main/index.html">
               <img class="logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
             </a>
           </div>
@@ -284,7 +284,7 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="#">
+              <a href="/pages/main/index.html">
                 <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
