--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -137,7 +137,7 @@
         <div class="container content">
           <div class="footer-content">
             <div class="footer-links__logo-button">
-              <a href="#">
+              <a href="/pages/main/index.html">
                 <img class="logo footer-logo" src="/assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
               <div class="donate__button">
